--- a/client/src/layout/assets/css/_app.scss
+++ b/client/src/layout/assets/css/_app.scss
@@ -22,7 +22,7 @@ $light-gray: #e5e5e5;
         display: flex;
 
         > .logo {
-          margin-right: 60px;
+          margin-right: 30px;
           
           a {
             background-color: $black;
@@ -65,8 +65,8 @@ $light-gray: #e5e5e5;
         justify-content: flex-end;
         color: $light-black;
         > .controls-item {
-          margin-left: 25px;
-          padding: 10px 25px;
+          margin-left: 15px;
+          padding: 10px 0 10px 25px;
 
           &.user {
             background: url(../images/icons/user.png) no-repeat 0 center;
@@ -410,6 +410,14 @@ $light-gray: #e5e5e5;
           }
         }
       }
+      &.register, &.login {
+        > form {
+          @include breakpoint-up($bp-md) {
+            width: 40%;
+          }
+          margin: 50px auto;
+        } 
+      }
     }
 
   }
@@ -433,38 +441,16 @@ $light-gray: #e5e5e5;
   }
 }
 
-
-// number input
-.number-input {
-  display: flex;
-  > .number-input-btn {
-    background-color: $black;
-    color: white;
-    font-size: 20px;
-    font-weight: 700;
-    padding: 5px 15px;
-    transition: all 0.3s;
-    &.plus {
-      &::before {
-        content: "+";
-      }
-
-    }
-    &.minus {
-      &::before {
-        content: "-";
-      }
-      
-    }
-    &:hover {
-      cursor: pointer;
-      background-color: $black-hover;
-    }
-  }
-
-  > .number-input-input {
-    width: 50px;
-    text-align: center;
+.field {
+  display: block;
+  margin-bottom: 10px;
+  > input {
+    padding: 10px;
+    border: 1px solid $light-black;
+    font-size: 16px;
+    border-radius: 2px;
+    width: 100%;
+    color: $black;
   }
 }
 
@@ -488,5 +474,12 @@ $light-gray: #e5e5e5;
     cursor: pointer;
     background-color: $accent-hover;
   }
+  &:disabled {
+    background-color: $light-gray;
+    color: $gray;
+    cursor: not-allowed;
+  }
 }
+
+
 
