button states functionality

--- a/client/src/layout/assets/css/styles.css
+++ b/client/src/layout/assets/css/styles.css
@@ -717,6 +717,10 @@ a {
   margin-right: 15px;
 }
 
+#shopper .main .page.product-detail > .product-detail-head > .info > .add-to-bag .add-button {
+  width: 200px;
+}
+
 #shopper .main .page.cart {
   color: #303030;
 }
@@ -817,30 +821,127 @@ a {
   color: #222222;
 }
 
-.button {
+.pb-container .pb-button svg.pb-checkmark path, .pb-container .pb-button svg.pb-cross path {
+  stroke: #fff;
+  stroke-linecap: round;
+  stroke-width: 4;
+}
+
+.pb-container {
   display: inline-block;
-  background-color: #f68236;
-  outline: 0;
-  font-size: 1rem;
-  border: none;
-  color: white;
   text-align: center;
-  text-transform: uppercase;
-  font-weight: 200;
-  word-spacing: 3px;
-  padding: 0.8em 1.2em;
-  border-radius: 1px;
-  transition: all 0.3s;
+  font-size: 1rem;
 }
 
-.button:hover {
+.pb-container .pb-button {
+  background: #f68236;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 2px;
+  color: #fff;
   cursor: pointer;
-  background-color: #e47730;
+  text-decoration: none;
+  text-align: center;
+  height: 54px;
+  width: 100%;
+  outline: none;
+  transition: background-color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s, border-radius 0.3s;
 }
 
-.button:disabled {
+.pb-container .pb-button span {
+  display: inherit;
+  transition: opacity 0.3s 0.1s;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  font-weight: 100;
+}
+
+.pb-container .pb-button svg {
+  height: 54px;
+  width: 54px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+}
+
+.pb-container .pb-button svg path {
+  opacity: 0;
+  fill: none;
+}
+
+.pb-container .pb-button svg.pb-progress-circle {
+  animation: spin 0.9s infinite cubic-bezier(0.085, 0.26, 0.935, 0.71);
+}
+
+.pb-container .pb-button svg.pb-progress-circle path {
+  stroke: #f68236;
+  stroke-width: 5;
+}
+
+.pb-container.disabled .pb-button {
   background-color: #e5e5e5;
   color: #606060;
   cursor: not-allowed;
+}
+
+.pb-container.loading .pb-button {
+  width: 54px;
+  border-width: 6.5px;
+  border-color: #ddd;
+  cursor: wait;
+  background-color: transparent;
+  padding: 0;
+}
+
+.pb-container.loading .pb-button span {
+  transition: all 0.15s;
+  opacity: 0;
+  display: none;
+}
+
+.pb-container.loading .pb-button .pb-progress-circle > path {
+  transition: opacity 0.15s 0.3s;
+  opacity: 1;
+}
+
+.pb-container.success .pb-button {
+  border-color: #a0d468;
+  background-color: #a0d468;
+}
+
+.pb-container.success .pb-button span {
+  transition: all 0.15s;
+  opacity: 0;
+  display: none;
+}
+
+.pb-container.success .pb-button .pb-checkmark > path {
+  opacity: 1;
+}
+
+.pb-container.error .pb-button {
+  border-color: #ed5565;
+  background-color: #ed5565;
+}
+
+.pb-container.error .pb-button span {
+  transition: all 0.15s;
+  opacity: 0;
+  display: none;
+}
+
+.pb-container.error .pb-button .pb-cross > path {
+  opacity: 1;
+}
+
+@keyframes spin {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+    transform-origin: center center;
+  }
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+    transform-origin: center center;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
