--- a/client/src/layout/assets/css/_app.scss
+++ b/client/src/layout/assets/css/_app.scss
@@ -358,6 +358,9 @@ $light-gray: #e5e5e5;
                   }
                 }
               }
+              .add-button {
+                width: 200px;
+              }
             }
           }
         }
@@ -455,30 +458,129 @@ $light-gray: #e5e5e5;
 }
 
 // button 
-.button {
-  display: inline-block;
-  background-color: $accent;
-  outline: 0;
-  font-size: 1rem;
-  border: none;
-  color: white;
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: 200;
-  word-spacing: 3px;
-  padding: 0.8em 1.2em;
-  border-radius: 1px;
-  transition: all 0.3s;
+//colors
+$color_alto_approx: #ddd;
+$color_wild_willow_approx: #a0d468;
+$color_mandy_approx: #ed5565;
 
-  &:hover {
-    cursor: pointer;
-    background-color: $accent-hover;
-  }
-  &:disabled {
+//@extend-elements
+//original selectors
+//.pb-container .pb-button svg.pb-checkmark path, .pb-container .pb-button svg.pb-cross path
+%extend_1 {
+	stroke: $white;
+	stroke-linecap: round;
+	stroke-width: 4;
+}
+
+
+//button
+.pb-container {
+	display: inline-block;
+  text-align: center;
+  font-size: 1rem;
+	.pb-button {
+    background: $accent;
+    padding: 5px 10px;
+		border: none;
+		border-radius: 2px;
+		color: $white;
+		cursor: pointer;
+		text-decoration: none;
+		text-align: center;
+		height: 54px;
+		width: 100%;
+		outline: none;
+		transition: background-color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s, border-radius 0.3s;
+		span {
+			display: inherit;
+			transition: opacity 0.3s 0.1s;
+      font-size: 1.2em;
+      text-transform: uppercase;
+			font-weight: 100;
+		}
+		svg {
+			height: 54px;
+			width: 54px;
+			position: absolute;
+			transform: translate(-50%, -50%);
+			pointer-events: none;
+			path {
+				opacity: 0;
+				fill: none;
+			}
+			&.pb-progress-circle {
+				animation: spin 0.9s infinite cubic-bezier(0.085, 0.260, 0.935, 0.710);
+				path {
+					stroke: $accent;
+					stroke-width: 5;
+				}
+			}
+			&.pb-checkmark path {
+				@extend %extend_1;
+			}
+			&.pb-cross path {
+				@extend %extend_1;
+			}
+		}
+	}
+	&.disabled .pb-button {
     background-color: $light-gray;
     color: $gray;
-    cursor: not-allowed;
-  }
+		cursor: not-allowed;
+	}
+	&.loading .pb-button {
+		width: 54px;
+		border-width: 6.5px;
+		border-color: $color_alto_approx;
+		cursor: wait;
+		background-color: transparent;
+		padding: 0;
+		span {
+			transition: all 0.15s;
+			opacity: 0;
+			display: none;
+		}
+		.pb-progress-circle > path {
+			transition: opacity 0.15s 0.3s;
+			opacity: 1;
+		}
+	}
+	&.success .pb-button {
+		border-color: $color_wild_willow_approx;
+		background-color: $color_wild_willow_approx;
+		span {
+			//Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
+			transition: all 0.15s;
+			opacity: 0;
+			display: none;
+		}
+		.pb-checkmark > path {
+			opacity: 1;
+		}
+	}
+	&.error .pb-button {
+		border-color: $color_mandy_approx;
+		background-color: $color_mandy_approx;
+		span {
+			//Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
+			transition: all 0.15s;
+			opacity: 0;
+			display: none;
+		}
+		.pb-cross > path {
+			opacity: 1;
+		}
+	}
+}
+@keyframes spin {
+	from {
+		transform: translate(-50%, -50%) rotate(0deg);
+		transform-origin: center center;
+	}
+	to {
+		transform: translate(-50%, -50%) rotate(360deg);
+		transform-origin: center center;
+	}
 }
 
 
